Added Heurigen to schedule

--- a/index.html
+++ b/index.html
@@ -311,6 +311,17 @@
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
 
+                    <tr>
+                        <td></td>
+                        <td>
+                            <h4>Social Event</h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>18:15</strong></td>
+                        <td>Bus leaves to social event (Heurigen)</td>
+                    </tr>
+
                 </table>
             </div>
 
