--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#cfp">Call for Papers</a>
+              <a class="nav-link js-scroll-trigger" href="#cfp">Call for Participation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#program-committee">Program Committee</a>
@@ -94,11 +94,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
-                    <h2 class="section-heading text-center">Call For Papers</h2>
+                    <h2 class="section-heading text-center">Call For Participation</h2>
                     <h3 class="about-text">
-                        This workshop will focus on architecture and design of hardware accelerators for computational biology and bioinformatics problems.
-                        We plan to present and discuss a variety of acceleration techniques, accelerator architectures and their implications on the development of computational biology.<br>
-                        Topics of interest include, but are not limited to:
+                        This workshop focuses on architecture and design of hardware accelerators for computational biology and bioinformatics problems.
+                        The schedule has 4 invited talks, 10 regular paper and 3 short paper presentations.
+                        Presentation topics cover the following:
                     </h3>
                     <ul>
                         <li>Impact of bioinformatics and biology applications on computer architecture research</li>
@@ -113,7 +113,7 @@
                         <li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
                     </ul>
 
-                    <h2>Submission Guidelines</h2>
+                    <!--<h2>Submission Guidelines</h2>
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
                         <a href="https://easychair.org/conferences/?conf=aacbb2018">https://easychair.org/conferences/?conf=aacbb2018</a>
                     </h5>
@@ -128,6 +128,10 @@
                         <del>December 15, 2017.</del>
                         <u>Monday, December 18, 2017</u> (extended due to a special request).</h5>
                     <h5>Notification by: <u>December 21, 2017.</u></h5>
+                    -->
+
+                    <h4>The complete schedule can be found <a href="#schedule">below</a></h4>
+
                 </div>
             </div>
         </div>
@@ -209,7 +213,7 @@
                     <!-- Paper session 2 (3 regular papers) -->
                     <tr>
                         <td>11:10 - 11:30</td>
-                        <td>Wenqin Huangfu+, Zhenhua Zhu*, Xing Hu+, Yu Wang* and Yuan Xie+ (+UCSB, *Tsinghua University)
+                        <td>Wenqin Huangfu+, Zhenhua Zhu*, Tianqi Tang+, Xing Hu+, Yu Wang* and Yuan Xie+ (+UCSB, *Tsinghua University)
                             <br><i>GAME: GPU Acceleration of Metagenomics Clustering</i></td>
                     </tr>
                     <tr>
