--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <h2 class="section-heading text-center">Call For Participation</h2>
                     <h3 class="about-text">
                         This workshop focuses on architecture and design of hardware accelerators for computational biology and bioinformatics problems.
-                        The schedule has 4 invited talks, 10 regular paper and 3 short paper presentations.
+                        The schedule has 4 invited talks, 13 paper presentations.
                         Presentation topics cover the following:
                     </h3>
                     <ul>
