Updated Srinivas' talk abstract

--- a/index.html
+++ b/index.html
@@ -364,8 +364,12 @@
                                 <h5 class="subheading">13:30-14:10</h5>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
-                                <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
+                                    This talk will introduce the Micron Automata Processor (AP), a novel computing architecture that enables massively parallel execution of numerous non-deterministic finite automata.
+                                    The processor inspires a new programming paradigm of solving problems using complex pattern matching engines executed over streaming data.
+                                    The first part of this talk will focus on the processor characteristics, programming and execution environment, and design principles we discovered that are of value in developing applications on the AP.
+                                    The second part will feature my group's research on developing bioinformatics algorithms for the AP including database search and motif detection.
+                                </p>
                             </div>
                         </div>
                     </li>
