--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/Roman.png" alt="">
               <h4>Roman Kaplan</h4>
-              <p class="oranizer-email">sromanka@campus.technion.ac.il</p>
+              <p class="oranizer-email">romankap@gmail.com</p>
                 <p class="text-left"><strong>Short bio:</strong>
                     Roman received his BSC and MSc from the faculty of Electrical Engineering, Technion, Israel in 2009 and 2015, respectively. He is now a PhD candidate in the same faculty under the supervision of Prof. Ran Ginosar. <br>
                     Roman's research interests are parallel computer architectures, in-data processing, accelerators for machine learning and big data, and novel computer architectures for bioinformatics applications.
