Updated Leonid's email

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/Leonid.jpg" alt="">
               <h4>Leonid Yavits</h4>
-              <p class="oranizer-email">yavits@technion.ac.il</p>
+              <p class="oranizer-email">leonid.yavits@nububbles.com</p>
                 <p class="text-left"><strong>Short bio:</strong> Leonid received his MSc and PhD in Electrical Engineering from the Technion. After graduating, he co-founded VisionTech where he co-designed a single chip MPEG2 codec. Following VisionTech’s acquisition by Broadcom, he co-founded Horizon Semiconductors where he co-designed a Set Top Box on chip for cable and satellite TV. <br>
                     Leonid is a postdoc fellow in Electrical Engineering in the Technion. He co-authored a number of patents and research papers on SoC and ASIC. His research interests include non von Neumann computer architectures and processing in memory</p>
             </div>
