Fixed first talks title

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <tr>
                         <td>09:20 - 09:40</td>
                         <td>Mohammed Alser+, Hasan Hassan*, Akash Kumar&, Onur Mutlu* and Can Alkan+ (+Bilkent Univ., *ETH Zurich, &TU Dresden)
-                            <br><i>Exploring Speed/Accuracy Trade-offs</i></td>
+                            <br><i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></td>
                     </tr>
                     <tr>
                         <td>09:20 - 09:40</td>
