Updated Onur's keynote abstract

--- a/index.html
+++ b/index.html
@@ -346,8 +346,29 @@
                                 <h5 class="subheading">8:40 - 9:20</h5>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
-                                <!--<p class="text-muted bio-text"><strong>Short bio: </strong> Onur Mutlu is a Full Professor of Computer Science at ETH Zurich. He previously held the William D. and Nancy W. Strecker Early Career Professorship at Carnegie Mellon University, and is also a faculty member there. His current broader research interests are in computer architecture, systems, and bioinformatics. He is especially interested in interactions across domains and between applications, system software, compilers, and microarchitecture, with a major current focus on memory and storage systems. He obtained his PhD and MS in ECE from the University of Texas at Austin and BS degrees in Computer Engineering and Psychology from the University of Michigan, Ann Arbor. His industrial experience spans starting the Computer Architecture Group at Microsoft Research (2006-2009), and various product and research positions at Intel Corporation, Advanced Micro Devices, and VMware. He received the inaugural IEEE Computer Society Young Computer Architect Award, the inaugural Intel Early Career Faculty Award, faculty partnership awards from various companies, and a healthy number of best paper or "Top Pick" paper recognitions at various computer systems and architecture venues. His computer architecture course lectures and materials are freely available on YouTube, and his research group makes software artifacts freely available online.</p>-->
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
+                                    Genome analysis is the foundation of many scientific and medical discoveries as well as a key pillar of personalized medicine.
+                                    Any analysis of a genome fundamentally starts with the reconstruction of the genome from its sequenced fragments.
+                                    This process is called read mapping.
+                                    One key goal of read mapping is to find the variations that are present between the sequenced genome and reference genome(s) and to tolerate the errors introduced by the genome sequencing process.
+                                    Read mapping is currently a major bottleneck in the entire genome analysis pipeline because state-of-the-art genome sequencing technologies are able to sequence a genome much faster than the computational techniques that are employed to reconstruct the genome.
+                                    New sequencing technologies, like nanopore sequencing, greatly exacerbate this problem while at the same time making genome sequencing much less costly.
+                                    <br>
+
+                                    This talk describes our ongoing journey in greatly improving the
+                                    performance of genome read mapping. We first provide a brief
+                                    background on read mappers that can comprehensively find variations
+                                    and tolerate sequencing errors. Then, we describe both algorithmic and
+                                    hardware-based acceleration approaches. Algorithmic approaches exploit
+                                    the structure of the genome as well as the structure of the underlying
+                                    hardware. Hardware-based acceleration approaches exploit specialized
+                                    microarchitectures or new execution paradigms like processing in
+                                    memory. We show that significant improvements are possible with both
+                                    algorithmic an hardware-based approaches and their combination. We
+                                    conclude with a foreshadowing of future challenges brought about by
+                                    very low cost yet highly error prone new sequencing technologies.
+
+                                </p>
 
                             </div>
                         </div>
