Corrections in Onur's derails and abstract

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, CMU / ETH Zurich</a></h4>
+                                <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH Zurich / CMU </a></h4>
                                 <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
                                 <h5 class="subheading">8:40 - 9:20</h5>
                             </div>
@@ -363,10 +363,8 @@
                                     the structure of the genome as well as the structure of the underlying
                                     hardware. Hardware-based acceleration approaches exploit specialized
                                     microarchitectures or new execution paradigms like processing in
-                                    memory. We show that significant improvements are possible with both
-                                    algorithmic an hardware-based approaches and their combination. We
-                                    conclude with a foreshadowing of future challenges brought about by
-                                    very low cost yet highly error prone new sequencing technologies.
+                                    memory. We show that significant improvements are possible with both algorithmic and hardware-based approaches and their combination.
+                                    We conclude with a foreshadowing of future challenges brought about by very low cost yet highly error prone new sequencing technologies.
 
                                 </p>
 
