--- a/index.html
+++ b/index.html
@@ -185,13 +185,19 @@
                     <tr>
                         <td>8:40 - 9:20</td>
                         <td><strong>Keynote 1: Onur Mutlu (ETH, CMU)
-                            <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong></td>
+                            <br>
+                                <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;&nbsp;
+                            (<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">link to slides</a>)
+                        </td>
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
                     <tr>
                         <td>09:20 - 09:40</td>
                         <td>Mohammed Alser+, Hasan Hassan*, Akash Kumar&, Onur Mutlu* and Can Alkan+ (+Bilkent Univ., *ETH Zurich, &TU Dresden)
-                            <br><i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></td>
+                            <br>
+                                <i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></a>
+                            &nbsp;&nbsp;(<a href="./slides/2018/MAGNET_AACBB_Vienna2018.pptx">link to slides</a>)
+                        </td>
                     </tr>
                     <tr>
                         <td>09:20 - 09:40</td>
