Added photos section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,69 @@
       </div>
     </section>
 
+
+    <section id="photos">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="padding-bottom-15">Photos from the workshop</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/Opening%20session.jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/Opening%20session.jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(1).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(1).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(2).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(2).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(candid%20photo).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(candid%20photo).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/bertil%20at%20aacbb%20(candid%20camera).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20at%20aacbb%20(candid%20camera).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/bertil%20at%20aacbb.jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20at%20aacbb.jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/bertil%20speaks%20at%20aacbb.jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20speaks%20at%20aacbb.jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/can%20at%20aacbb%20(1).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(1).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/can%20at%20aacbb%20(2).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(2).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/can%20at%20aacbb%20(3).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(3).jpg">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="cfp">
         <div class="container">
             <div class="row">
@@ -469,16 +532,6 @@
       </div>
     </section>
 
-    <section id="schedule">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="padding-bottom-15">Photos from Vienna</h2>
-
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Organizers -->
     <section class="bg-light" id="organizers">
