Uploaded Miguel's slides

--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
                     <tr>
                         <td>17:30 - 17:45</td>
                         <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto (BSC)
-                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i></td>
+                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i>
+                            (<a target="_blank" href="./slides/2018/20180224-aacbb-mmoreto.pdf">link to slides</a>)
+                        </td>
                     </tr>
 
                     <tr><td><br></td><td><br></td></tr>
