--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
                     <tr>
                         <td>15:30 - 16:10</td>
                         <td><strong>Invited Talk: Can Alkan (Bilkent University)
-                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong></td>
+                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong>
+                            (<a target="_blank" href="./slides/2018/alkan-aacbb.pptx">link to slides</a>)
+                        </td>
                     </tr>
 
                     <!-- Paper session 4 (2 regular papers) -->
