Added Sergiu's slides

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <tr>
                         <td>15:30 - 16:10</td>
                         <td><strong>Invited Talk: Can Alkan (Bilkent University)
-                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong>
+                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong> 
                             (<a target="_blank" href="./slides/2018/alkan-aacbb.pptx">link to slides</a>)
                         </td>
                     </tr>
@@ -346,7 +346,9 @@
                     <tr>
                         <td>16:10 - 16:30</td>
                         <td>Sergiu Mosanu and Mircea Stan (UVA)
-                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i></td>
+                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i>
+                            (<a target="_blank" href="./slides/2018/aacbb-serg-presi.pdf">link to slides</a>)
+                        </td>
                     </tr>
                     <tr>
                         <td>16:30 - 16:50</td>
