Uploaded Anirban's slides

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
                         <td>8:40 - 9:20</td>
                         <td><strong>Keynote 1: Onur Mutlu (ETH, CMU)
                             <br>
-                                <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;&nbsp;
-                            (<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">link to slides</a>)
+                                <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
+                            (<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>)
                         </td>
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
@@ -258,8 +258,8 @@
                         <td>09:20 - 09:40</td>
                         <td>Mohammed Alser+, Hasan Hassan*, Akash Kumar&, Onur Mutlu* and Can Alkan+ (+Bilkent Univ., *ETH Zurich, &TU Dresden)
                             <br>
-                                <i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></a>
-                            &nbsp;&nbsp;(<a href="./slides/2018/MAGNET_AACBB_Vienna2018.pptx">link to slides</a>)
+                                <i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></a>&nbsp;
+                            &nbsp;&nbsp;(<a href="./slides/2018/MAGNET_AACBB_Vienna2018.pptx">slides</a>)
                         </td>
                     </tr>
                     <tr>
@@ -337,8 +337,8 @@
                     <tr>
                         <td>15:30 - 16:10</td>
                         <td><strong>Invited Talk: Can Alkan (Bilkent University)
-                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong>
-                            (<a target="_blank" href="./slides/2018/alkan-aacbb.pptx">link to slides</a>)
+                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong>&nbsp;
+                            (<a target="_blank" href="./slides/2018/alkan-aacbb.pptx">slides</a>)
                         </td>
                     </tr>
 
@@ -346,8 +346,8 @@
                     <tr>
                         <td>16:10 - 16:30</td>
                         <td>Sergiu Mosanu and Mircea Stan (UVA)
-                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i>
-                            (<a target="_blank" href="./slides/2018/aacbb-serg-presi.pdf">link to slides</a>)
+                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i>&nbsp;
+                            (<a target="_blank" href="./slides/2018/aacbb-serg-presi.pdf">slides</a>)
                         </td>
                     </tr>
                     <tr>
@@ -368,7 +368,9 @@
                     <tr>
                         <td>17:00 - 17:15</td>
                         <td>Meysam Taassori+, Anirban Nag+, Keeton Hodgson+, Ali Shafiee* and Rajeev Balasubramonian+ (+Univ. of Utah, *Samsung Electronics)
-                            <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i></td>
+                            <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i>&nbsp;
+                            (<a target="_blank" href="./slides/2018/HPCA_2018_Genomics_An2_mychange.pdf">slides</a>)
+                        </td>
                     </tr>
                     <tr>
                         <td>17:15 - 17:30</td>
@@ -378,8 +380,8 @@
                     <tr>
                         <td>17:30 - 17:45</td>
                         <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto (BSC)
-                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i>
-                            (<a target="_blank" href="./slides/2018/20180224-aacbb-mmoreto.pdf">link to slides</a>)
+                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i>&nbsp;
+                            (<a target="_blank" href="./slides/2018/20180224-aacbb-mmoreto.pdf">slides</a>)
                         </td>
                     </tr>
 
